force-app/main/default/objects/Deadline__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <type>MasterDetail</type>
    <referenceTo>Matter__c</referenceTo>
    <relationshipName>Deadlines</relationshipName>
    <relationshipLabel>Deadlines</relationshipLabel>
</CustomField>